fixing background visibility when huge.

--- a/public/stylesheets/DV/themes/plain.css
+++ b/public/stylesheets/DV/themes/plain.css
@@ -30,10 +30,13 @@
   margin: 0;
   border: 0;
 }
-.DV-paper {
-  padding-top: 1px; /* needed to uncollapse the margin */
+
+.DV-pages, .DV-paper {
   background: #f5f6f7 url(../../../images/DV/embed/pagesbg.png);
 }
+  .DV-paper {
+    padding-top: 1px; /* needed to uncollapse the margin */
+  }
 
 .DV-privateLock, .DV-showEdit, .DV-permalink {
   width: 16px; height: 16px;
